# kdelibs

./: .gitexcludes  .kateproject  CMakeLists.txt  CPackConfig.cmake  CTestConfig.cmake  ConfigureChecks.cmake  CreateKDELibsDependenciesFile.cmake  CreateKDEPlatformProfile.cmake  DEBUG  KDE4Config.cmake  KDE4PORTING.html  KDE4Version.cmake  KDELibs4Config.cmake  KDELibs4Config.cmake.in  KDELibs4ConfigVersion.cmake  Mainpage.dox  Messages.sh  README  TODO  appveyor.yml  config-acl.h.cmake  config-compiler.h.cmake  config-misc.h.cmake  config-prefix.h.cmake  config-pty.h.cmake  config.h.cmake  doxygen.conf  kdemacros.h.cmake
dnssd/: CMakeLists.txt  CreateKcfgFiles.cmake  PACKAGERS  avahi-domainbrowser.cpp  avahi-publicservice.cpp  avahi-remoteservice.cpp  avahi-servicebrowser.cpp  avahi-servicebrowser_p.h  avahi-servicetypebrowser.cpp  avahi-servicetypebrowser_p.h  avahi_entrygroup_interface.cpp  avahi_entrygroup_interface.h  avahi_server_interface.cpp  avahi_server_interface.h  avahi_serviceresolver_interface.h  dnssd_export.h  domainbrowser.h  domainmodel.h  dummy-publicservice.cpp  dummy-remoteservice.cpp  dummy-servicebrowser.cpp  dummy-servicetypebrowser.cpp  mdnsd-domainbrowser.cpp  mdnsd-domainbrowser_p.h  mdnsd-publicservice.cpp  mdnsd-remoteservice.cpp  mdnsd-responder.cpp  mdnsd-servicebrowser.cpp  mdnsd-servicetypebrowser.cpp  publicservice.h  remoteservice.h  servicebase.cpp  servicebase.h  servicebrowser.h  servicemodel.h  servicetypebrowser.h  settings.kcfgc
includes/: CMakeLists.txt  KAudioPlayer  KAuthorization  KCalendarWidget  KCompressor  KDBusMenuExporter  KDBusMenuImporter  KDNSSD  KDecompressor  KDynamicJobTracker  KEMail  KEMailDialog  KExiv2  KFilePreview  KFilePreviewJob  KFilePreviewPlugin  KHTTP  KKeyboardLayout  KMediaPlayer  KMediaWidget  KNetworkManager  KNotificationConfigWidget  KPasswdStore  KPixmap  KPixmapWidget  KPowerManager  KSelectionOwner  KSpellBackgroundChecker  KSpellConfigWidget  KSpellDialog  KSpellDictionaryComboBox  KSpellHighlighter  KSpeller  KTimerDialog  KUiServerJobTracker  KUnitConversion  checkobsolete.py
kcddb/: CMakeLists.txt
kcompactdisc/: CMakeLists.txt  kcompactdisc.cpp
kconf_update/: CMakeLists.txt  kconf_update.cpp
kdcraw/: CMakeLists.txt  libkdcraw.pc.cmake
kdeclarative/: CMakeLists.txt  kdeclarative.cpp  kdeclarative.h  kdeclarative_export.h
kdecore/: CMakeLists.txt  MAINTAINERS  dbus_policy.stub  dbus_service.stub  fakes.cpp  generate_string_table.pl  genusb.py  kde-config.cpp  kde4_pci.ids  kde4_usb.ids  kdebug.areas  kdebugrc  kdecore_export.h  kdefakes.h.cmake  regen.sh  usb.ids
kded/: CMakeLists.txt  DESIGN  HOWTO  README.kded  kbuildmimetypefactory.cpp  kbuildprotocolinfofactory.cpp  kbuildservicefactory.cpp  kbuildservicegroupfactory.cpp  kbuildservicetypefactory.cpp  kbuildsycoca.cpp  kbuildsycoca.h  kctimefactory.cpp  kded.cpp  kded.h  kdedadaptor.cpp  kdedadaptor.h  kdedmodule.desktop  ksycocaresourcelist.h  org.kde.kded.service.in  vfolder_menu.cpp  vfolder_menu.h
kdesu/: CMakeLists.txt  client.cpp  client.h  kcookie.cpp  kcookie.h  kdesu_export.h  kdesu_stub.c  process.cpp  process.h  ssh.cpp  ssh.h  stub.cpp  stub.h  su.cpp  su.h
kdesudo/: CMakeLists.txt  kcookie.cpp  kcookie.h  kdesudo.cpp  kdesudo.h  main.cpp
kdeui/: CMakeLists.txt  kdepackages.h  kdeui_export.h  preparetips
kdewidgets/: CMakeLists.txt  README  kde.widgets  kdewebkit.widgets  kdewidgets.qrc  makekdewidgets.cpp
kexiv2/: CMakeLists.txt  libkexiv2.pc.cmake
kfile/: CMakeLists.txt  defaultviewadapter.cpp  defaultviewadapter_p.h  kdefaultviewadapter.cpp  kdefaultviewadapter_p.h  kdiroperator.cpp  kdiroperator.h  kdiroperatordetailview.cpp  kdiroperatordetailview_p.h  kdirselectdialog.cpp  kdirselectdialog.h  kdirsortfilterproxymodel.cpp  kdirsortfilterproxymodel.h  kfile_export.h  kfilebookmarkhandler.cpp  kfilebookmarkhandler_p.h  kfilefiltercombo.cpp  kfilefiltercombo.h  kfilemodule.cpp  kfilemodule.h  kfileplaceeditdialog.cpp  kfileplaceeditdialog.h  kfileplacesitem.cpp  kfileplacesitem_p.h  kfileplacesmodel.cpp  kfileplacesmodel.h  kfileplacesview.cpp  kfileplacesview.h  kfileplacesview_p.h  kfilepreviewgenerator.cpp  kfilepreviewgenerator.h  kfiletreeview.cpp  kfiletreeview.h  kfilewidget.cpp  kfilewidget.h  knameandurlinputdialog.h  knewfilemenu.cpp  kurlnavigator.cpp  kurlnavigator.h  kurlnavigatorbutton.cpp  (+10 more)
kimgio/: AUTHORS  CMakeLists.txt  README  bmp.desktop  dds.cpp  dds.desktop  dds.h  eps.cpp  eps.desktop  eps.h  exr.cpp  exr.desktop  exr.h  gif.desktop  hdr.cpp  hdr.h  ico.cpp  ico.desktop  ico.h  jp2.cpp  jp2.desktop  jp2.h  jpeg.cpp  jpeg.h  jpg.cpp  jpg.desktop  jpg.h  magick.cpp  magick.h  pbm.desktop  pcx.cpp  pcx.desktop  pcx.h  pgm.desktop  pic_io_plugin.cpp  pic_io_plugin.h  pic_read.cpp  pic_rw.h  ppm.desktop  psd.cpp  (+24 more)
kinit/: CMakeLists.txt  README  README.autostart  README.wrapper  autostart.cpp  autostart.h  config-kdeinit.h.cmake  kinit.cpp  kioslave.cpp  klauncher.cpp  klauncher.h  klauncher_adaptor.cpp  klauncher_adaptor.h  klauncher_cmds.cpp  klauncher_cmds.h  klauncher_main.cpp  lnusertemp.c  org.kde.klauncher.service.in  proctitle.cpp  proctitle.h  wrapper.c
kio/: CMakeLists.txt  DESIGN  DESIGN.metadata  DESKTOP_ENTRY_STANDARD  Messages.sh  application.desktop  kcmodule.desktop  kcmoduleinit.desktop  kfilemetadataplugin.desktop  kfilepreviewplugin.desktop
kjs/: CMakeLists.txt  ExecState.h  array_instance.cpp  collector.cpp  create_parser  date_object.cpp  global.h.cmake  grammar.cpp  grammar.h  identifier.cpp  lexer.cpp  nodes.cpp  property_map.cpp  regexp.cpp  string_object.cpp  ustring.cpp  ustring.h
knotify/: CMakeLists.txt  PORTING.html  knotifyconfig_export.h  knotifyconfigactionswidget.cpp  knotifyconfigactionswidget.h  knotifyconfigactionswidgetbase.ui  knotifyconfigelement.cpp  knotifyconfigelement.h  knotifyconfigwidget.cpp  knotifyeventlist.cpp
kparts/: CMakeLists.txt  browserextension.cpp  browserextension.h  browserinterface.cpp  browseropenorsavequestion.cpp  browserrun.cpp  browserrun.h  browserrun_p.h  componentfactory.h  event.cpp  event.h  factory.cpp  factory.h  (+16 more)
(+3045 files in other folders)
